--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Zenix",
-  "name": "Zenix - Crypto Admin Dashboard ",
+  "short_name": "DeaNa",
+  "name": "DeaNa - Crypto Admin Dashboard ",
   "icons": [
     {
       "src": "favicon.ico",
