--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "@types/crypto-js": "^4.1.1",
     "@y0c/react-datepicker": "^1.0.4",
     "apexcharts": "^3.36.3",
     "axios": "^0.26.0",
     "bootstrap-daterangepicker": "^3.1.0",
+    "buffer": "^6.0.3",
     "chart.js": "^3.7.1",
     "chartist": "^1.3.0",
     "chartjs-plugin-streaming": "^2.0.0",
     "create-react-class": "^15.7.0",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.1.1",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "fullcalendar": "^5.11.0",
@@ -30,6 +34,7 @@
     "node-sass": "^7.0.1",
     "nouislider-react": "^3.4.1",
     "p-min-delay": "^4.0.1",
+    "process": "^0.11.10",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^1.6.1",
@@ -62,12 +67,17 @@
     "redux-thunk": "^2.4.1",
     "simple-react-lightbox": "^3.5.0",
     "slick-carousel": "^1.8.1",
+    "stream-browserify": "^3.0.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^10.10.4",
     "swiper": "^8.0.7",
     "web-vitals": "^2.1.4",
+    "web3": "^1.8.1",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
+  },
+  "browser": {
+    "crypto": false
   },
   "scripts": {
     "start": "react-scripts start",
